Allows Vertical management via API
