# config/routes.rb
@@ -1,4 +1,10 @@
 Rails.application.routes.draw do
   mount Rswag::Ui::Engine => '/'
   mount Rswag::Api::Engine => '/'
+
+  namespace :api do
+    namespace :v1 do
+      resources :verticals
+    end
+  end
 end
